[Fix] [overflow]

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@ body {
   max-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  overflow-x: hidden;
 }
 
 header {
